# SalishSeaNowcast

./: .coveragerc  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  README.rst  SalishSeaNowcast_filemap.txt  __pkg_metadata__.py  environment-dev.yaml  environment-fig-dev.yaml  environment-prod.yaml  environment-rtd.yaml  environment-rtd.yml  pyproject.toml  readthedocs.yml  requirements.pip  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml
.github/workflows/: add-milestone-issue-pr.yaml  assign-issue-pr.yaml  codeql-analysis.yaml  docs-linkcheck.yaml  pytest-coverage.yaml  pytest-with-coverage.yaml  sphinx-linkcheck.yaml
config/: circus.ini  circus_logger.yaml  nowcast.yaml  supervisord.ini  ww3_hindcast.yaml  wwatch3-forcing.yaml
config/reshapr/: day-average_202111_biology.yaml  day-average_202111_chemistry.yaml  day-average_202111_physics.yaml  month-average_202111_bio_growth_rates.yaml  month-average_202111_biology.yaml  month-average_202111_chemistry.yaml  month-average_202111_grazing_mortality.yaml  month-average_202111_physics.yaml
docs/: Makefile  api.rst  conf.py  config.rst  creating_workers.rst  deploy.rst  dev_deploy.rst  development.rst  figures.rst  framework.rst  index.rst  license_description.txt  pkg_development.rst  worker_failures.rst  workers.rst
docs/deployment/: arbutus_cloud.rst  index.rst  operations.rst  optimum.rst  orcinus.rst  skookum.rst  skookum_salish.rst  west_cloud.rst
docs/figures/: create_fig_module.rst  creating_figures.rst  fig_dev_env.rst  fig_module_tips.rst  fig_modules.rst  index.rst  make_figure_calls.rst  site_view_fig_metadata.rst  website_theme.rst
docs/from_tools_pkg/: deploy.rst  development.rst
env/: environment-dev.yaml  environment-fig-dev.yaml  environment-prod.yaml  requirements.txt
envs/: environment-dev.yaml  environment-fig-dev.yaml  environment-linkcheck.yaml  environment-prod.yaml  environment-rtd.yaml  environment-sarracenia.yaml  environment-test.yaml  requirements-sarracenia.txt  requirements.txt
notebooks/: DailyNowcastFigures.ipynb  Developing-make_ww3_current_file-worker.ipynb  Developing-make_ww3_wind_file-worker.ipynb  DevelopingAnalyzeModule.ipynb  DevelopingNowcastFigureFunctions.ipynb  DevelopingSalinityTemplate.ipynb  ERDDAP_datasets.ipynb  ExamineResiduals.ipynb  FCST_Template.ipynb  In_Template.ipynb  LiveOcean_TS_BC_Runner.ipynb  MakeOldRunoffFiles.ipynb  Original_DailyNowcastFigures.ipynb  Out_Template.ipynb  ProductionDailyRiverNCfile.ipynb  README.md  SSH_NeahBay.ipynb  Salininty_Template.ipynb  Test-research_VENUS-Module.ipynb  TestResearchFerriesModule.ipynb  TofinoWaterLevels.ipynb  make_readme.py  surge_warning.ipynb
nowcast/: .style.yapf  __about__.py  __init__.py  __pkg_metadata__.py  analyze.py  daily_river_flows.py  figures.py  lib.py  next_workers.py  nowcast.yaml  nowcast_broker.py  nowcast_mgr.py  nowcast_worker.py  places.py  plots.py  research_VENUS.py  research_ferries.py  research_ferries_test.py  residuals.py  ssh_sftp.py
nowcast/figures/: figures.py  research_VENUS.py  research_ferries.py  shared.py  surface_current_domain.py  website_theme.py
nowcast/notebooks/: DevelopingAnalyzeModule.ipynb  ExamineResiduals-CHS tides.ipynb  ExamineResiduals-no correction.ipynb  (+10 more)
release_mgmt/: doug_kudu.yaml  susan_cedar.yaml  tag_release.py
sarracenia/: README.rst  hrdps-continental-dd-weather.conf  hrdps-continental-hpfx.conf  hrdps-west-hpfx.conf  hrdps-west.conf  hydrometric-dd-weather.conf  hydrometric-hpfx.conf  hydrometric.conf
tests/: conftest.py  test_analyze.py  test_config.py  test_daily_river_flows.py  test_lib.py  test_make_CHS_currents_file.py  test_next_workers.py  test_nowcast_mgr.py  test_nowcast_worker.py  test_residuals.py
tidal_predictions/: Boundary Bay_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Boundary Bay_tidal_prediction_01-Jan-2015_01-Jan-2020.csv  Boundary Bay_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Campbell River_atide_compare8_31-Dec-2013_02-Dec-2015.csv  Campbell River_harmonics_31-Dec-2012_02-Jan-2014.csv  Campbell River_t_tide_compare8_31-Dec-2013_02-Dec-2015.csv  Campbell River_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Campbell River_tidal_prediction_01-Jan-2015_01-Jan-2020.csv  Cherry Point_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Cherry Point_tidal_prediction_01-Jan-2015_01-Jan-2020.csv  Cherry Point_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Compare DFO tides with my tides.ipynb  Friday Harbor_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Friday Harbor_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Halfmoon Bay_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Halfmoon Bay_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Nanaimo_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Nanaimo_tidal_prediction_01-Jan-2015_01-Jan-2020.csv  Neah Bay_1h_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Neah Bay_tidal_prediction_01-Jan-2015_01-Jan-2020.csv  New Westminster_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  New Westminster_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Patricia Bay_harmonics_31-Dec-2012_02-Jan-2014.csv  Patricia Bay_t_tide_compare8_31-Dec-2013_02-Dec-2015.csv  Patricia Bay_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Patricia Bay_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Point Atkinson_atide_compare8_31-Dec-2013_02-Dec-2015.csv  Point Atkinson_harmonics_31-Dec-2012_02-Jan-2014.csv  Point Atkinson_t_tide_compare8_31-Dec-2013_02-Dec-2015.csv  Point Atkinson_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Point Atkinson_tidal_prediction_01-Jan-2015_01-Jan-2020.csv  Port Renfrew_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Port Renfrew_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Sand Heads_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Sand Heads_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Sandy Cove_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Sandy Cove_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Squamish_tidal_prediction_01-Jan-2013_31-Dec-2020.csv  Squamish_tidal_prediction_01-Jan-2015_31-Dec-2020.csv  Tides.ipynb  (+9 more)
v2_tests/: test_nowcast_mgr.py
(+224 files in other folders)
