# Copyright 2013 – present by the SalishSeaCast Project contributors
# and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "SalishSeaNowcast"
dynamic = [ "version" ]
description = "SalishSeaCast ocean modeling automation system"
readme = "README.rst"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca" },
]
keywords = [
    "automation", "oceanography", "ocean modelling",
    "UBC-MOAD", "Salish Sea", "SalishSeaCast",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # see envs/environment-prod.yaml for conda environment production installation
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for package versions used during recent development
    # see envs/environment-rtd.yaml for conda environment used for readthedocs build
    "angles",
    "arrow",
    "beautifulsoup4",
    "bottleneck",
    "cartopy",
    "cfgrib",
    "click",
    "cliff",
    "cmocean",
    "dask",
    "docutils",
    "et_xmlfile",
    "f90nml",
    "feedgen",
    "flox",
    "gitpython",
    "gsw",
    "h5netcdf",
    "httpx",
    "lxml",
    "mako",
    "matplotlib",
    "nc-time-axis",
    "netcdf4",
    "numpy",
    "numpy-indexed",
    "openpyxl",
    "pandas",
    "paramiko",
    "pillow",
    # "poppler",  # pip doesn't see poppler pkg installed by conda to provide pdftocairo
    "pygrib",
    "pypdf",
    "pyproj",
    "python-hglib",
    "pyyaml",
    "retrying",
    "rich",
    "scipy",
    "scour",
    "sentry-sdk",
    "structlog",
    "supervisor",
    "sysrsync",
    "tenacity",
    "tqdm",
    "utm",
    "watchdog",
    "xarray == 2025.1.1",
    # 'NEMO_Nowcast',  # use python -m pip install --editable NEMO_Nowcast/
    # 'moad_tools',  # use python -m pip install --editable moad_tools
    # 'Reshapr',  # use python -m pip install --editable Reshapr
    # 'SalishSeaTools',  # use python -m pip install --editable tools/SalishSeaTools/
    # 'Reshapr',  # use python -m pip install --editable Reshapr/
    # 'OPPTools',  # use python -m pip install --editable OPPTools/
    # 'NEMO-Cmd',  # use python -m pip install --editable NEMO-Cmd/
    # 'SalishSeaCmd',  # use python -m pip install --editable SalishSeaCmd/
    # 'FVCOM-Cmd',  # use python -m pip install --editable FVCOM-Cmd/
    # 'SalishSeaNowcast',  # use python -m pip install -e SalishSeaNowcast/
]

[project.urls]
"Documenation" = "https://salishsea-nowcast.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/SalishSeaCast/SalishSeaNowcast/releases"
"Issue Tracker" = "https://github.com/SalishSeaCast/SalishSeaNowcast/issues"
"Source Code" = "https://github.com/SalishSeaCast/SalishSeaNowcast"


[tool.coverage.run]
branch = true
source = ["nowcast", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
packages = ["nowcast"]

[tool.hatch.version]
path = "nowcast/__about__.py"
