;  Copyright 2013 – present by the SalishSeaCast Project contributors
;  and The University of British Columbia
;
;  Licensed under the Apache License, Version 2.0 (the "License");
;  you may not use this file except in compliance with the License.
;  You may obtain a copy of the License at
;
;     https://www.apache.org/licenses/LICENSE-2.0
;
;  Unless required by applicable law or agreed to in writing, software
;  distributed under the License is distributed on an "AS IS" BASIS,
;  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
;  See the License for the specific language governing permissions and
;  limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[metadata]
name = SalishSeaNowcast
version = attr: nowcast.__version__
description = SalishSeaCast ocean modeling automation system
author = Doug Latornell
author_email = dlatornell@eoas.ubc.ca
url = https://salishsea-nowcast.readthedocs.io/en/latest/
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    ; see envs/environment-prod.yaml for conda environment production installation
    ; see envs/environment-dev.yaml for conda environment dev installation
    ; see envs/requirements.txt for package versions used during recent development
    ; see envs/environment-rtd.yaml for conda environment used for readthedocs build
    angles
    arrow>=1.0
    beautifulsoup4
    bottleneck
    cartopy
    cliff
    cmocean
    dask
    docutils
    f90nml
    feedgen
    geopandas
    gitpython
    gsw
    lxml
    mako
    matplotlib
    nc-time-axis
    nemo_nowcast
    netcdf4
    numpy
    numpy-indexed
    pandas
    paramiko
    pillow
    ; poppler  ; pip doesn't recognize poppler pkg installed by conda
    pygrib
    pypdf2
    pyproj
    ; pytables
    tables
    python-hglib
    rasterio
    retrying
    scipy
    scour
    sentry-sdk
    shapely
    supervisor
    sysrsync
    utm
    watchdog
    xarray
    ; 'NEMO_Nowcast',  ; use python3 -m pip install --editable NEMO_Nowcast/
    ; 'moad_tools',  ; use python3 -m pip install --editable moad_tools
    ; 'SalishSeaTools',  ; use python3 -m pip install --editable tools/SalishSeaTools/
    ; 'OPPTools',  ; use python3 -m pip install --editable OPPTools/
    ; 'NEMO-Cmd',  ; use python3 -m pip install --editable NEMO-Cmd/
    ; 'SalishSeaCmd',  ; use python3 -m pip install --editable SalishSeaCmd/
    ; 'FVCOM-Cmd',  ; use python3 -m pip install --editable FVCOM-Cmd/
    ; 'SalishSeaNowcast',  ; use python3 -m pip install -e SalishSeaNowcast/
